--- a/index.css
+++ b/index.css
@@ -1,3 +1,29 @@
+body {
+  margin: 0px;
+}
+
+#page {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+#page > ol {
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+#page > textarea {
+  flex-grow: 1;
+  flex-shrink: 1;
+  min-height: 200px;
+}
+
 code {
   background-color: lightgrey;
   padding: 2px 4px;
@@ -28,7 +54,6 @@ input[type="file"][disabled] {
 
 textarea {
   display: block;
-  height: 60vh;
   width: 100%;
   resize: none;
   box-sizing: border-box;
